kubernetes/apps/whoami/branch/whoami.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: whoami-${branch_slug}
  labels:
    name: whoami-${branch_slug}
    app.kubernetes.io/name: whoami
    app.kubernetes.io/part-of: branch-environment
    homelab.petebeegle.com/branch-slug: ${branch_slug}
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-${branch_slug}
  namespace: whoami-${branch_slug}
  labels:
    app.kubernetes.io/name: whoami
    homelab.petebeegle.com/branch-slug: ${branch_slug}
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
      homelab.petebeegle.com/branch-slug: ${branch_slug}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
        homelab.petebeegle.com/branch-slug: ${branch_slug}
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.12.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-${branch_slug}
  namespace: whoami-${branch_slug}
  labels:
    app.kubernetes.io/name: whoami
    homelab.petebeegle.com/branch-slug: ${branch_slug}
spec:
  selector:
    app.kubernetes.io/name: whoami
    homelab.petebeegle.com/branch-slug: ${branch_slug}
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: whoami-${branch_slug}-to-internal-gateway
  namespace: gateway
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: whoami-${branch_slug}
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-${branch_slug}
  namespace: whoami-${branch_slug}
  labels:
    app.kubernetes.io/name: whoami
    homelab.petebeegle.com/branch-slug: ${branch_slug}
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - whoami-${branch_slug}.${cluster_domain}
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: whoami-${branch_slug}
          port: 80
          weight: 1
